Fixed alignment of stars on index page

--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -81,3 +81,7 @@ body {
 .lh-100 { line-height: 1; }
 .lh-125 { line-height: 1.25; }
 .lh-150 { line-height: 1.5; }
+
+.star-rating {
+  padding-left: .75rem;
+}
